2025-01-07  Zhengyi Fu  <i@fuzy.me>

	Move consult interface for browser-hist to a separate file.
	* consult-browser-hist.el: New file.
	* init.el: Remove consult-browser-hist implemenation.

	* init.el: Add a consult-buffer-source for FireFox.
	Add autoload cookie for `browser-hist--send-query'.

	* site-lisp/exde.el: Enable exwm-ns.
	* packages.el: Add package exwm-ns.

2025-01-06  Zhengyi Fu  <i@fuzy.me>

	* init.el (consult-browser-hist): Enhance browser-hist with consult.

2025-01-05  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/exde.el: Enable display time mode.
	Add commands for capturing screens.
	(exde-capture-xwindow, exde-capture-interactive)
	(exde-capture-fullscreen): New commands.
	(exde-capture-and-display): New function.
	(+exwm--read-window-id): New function.
	(exde-capture-frame): New command.
	(exde-capture-rectangle): New function.
	(exde-capture-window): New command.

2025-01-04  Zhengyi Fu  <i@fuzy.me>

	* init.el (+exwm--command-line-handler): Handle --exde as well as
	--exwm.
	* site-lisp/exde.el: Rename from exwm-settings.
	* packages.el: Add exwm, xelb, exwm-firefox.

	* init.el: Add kagi.com to webjump-sites.

	* exwm-settings.el: Move rime workaround for EXWM to exwm-settings.el.

	* init.el: bind puni commands in lisp-mode-shared-map instead of
	lisp-data-mode-map.

	* site-lisp/consult-omni-kagi.el: New file.

	* site-lisp/exwm-settings.el (exwm-input-prefix-keys): Add ?\M-s.

2025-01-03  Zhengyi Fu  <i@fuzy.me>

	* init.el: Bind "M-g o" to consult-org-heading in org-mode-map.

	* site-lisp/consult-kill.el (consult-kill): Simplify code.

	* init.el (+exwm--command-line-handler): Handle --exwm command
	line argument.
	(command-line-functions): Add +exwm--command-line-handler.

	* site-lisp/exwm-settings.el (exwm-input-global-keys): Add
	alternative keybindings for ms-windows.
	(exwm-input-prefix-key): Add ?\M-o

	* site-lisp/tui/tui.el: tui-kill drops dependency on tik.
	(tui--kill-callback): New function.
